log
Thu 21 Mar 2024 08:18:27 PM UTC: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:46:4: error: ‘A’ undeclared (first use in this function)
   46 |    A
      |    ^
exercises.c:46:4: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:46:5: error: expected ‘;’ before ‘return’
   46 |    A
      |     ^
      |     ;
   47 |    return L;
      |    ~~~~~~
exercises.c:45:10: error: unused variable ‘L’ [-Werror=unused-variable]
   45 |    List* L = create_list();
      |          ^
exercises.c:48:1: error: control reaches end of non-void function [-Werror=return-type]
   48 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
d208c6d
Thu 21 Mar 2024 08:18:53 PM UTC: 
 exercises.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  1|4
total_score: 10/70
9731bca
Thu 21 Mar 2024 08:27:11 PM UTC: 
 exercises.c | 10 ++++++++--
 1 file changed, 8 insertions(+), 2 deletions(-)
 tests:  1|4
total_score: 10/70
96a802d
Thu 21 Mar 2024 08:28:27 PM UTC: 
 exercises.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  2|3
total_score: 20/70
be6ede9
Thu 21 Mar 2024 08:32:04 PM UTC: 
 exercises.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  3|2
total_score: 40/70
fa1aa70
Thu 21 Mar 2024 08:38:20 PM UTC: 
 exercises.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
In file included from test.c:5:
exercises.c: In function ‘copia_pila’:
exercises.c:98:10: error: unused variable ‘P3’ [-Werror=unused-variable]
   98 |   Stack* P3 = create_stack();
      |          ^~
cc1: all warnings being treated as errors
Compilation failed
ce3ac44
Thu 21 Mar 2024 08:38:30 PM UTC: 
 exercises.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  3|2
total_score: 40/70
02360d6
Thu 21 Mar 2024 08:40:20 PM UTC: 
 exercises.c | 10 ++++++----
 1 file changed, 6 insertions(+), 4 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘copia_pila’:
exercises.c:105:21: error: ‘P3’ undeclared (first use in this function); did you mean ‘P2’?
  105 |   while((dato = pop(P3)) != NULL)
      |                     ^~
      |                     P2
exercises.c:105:21: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
7555ab7
Thu 21 Mar 2024 08:40:41 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|2
total_score: 40/70
691d05b
